--- a/app/index.html
+++ b/app/index.html
@@ -103,7 +103,7 @@
 	<div class="container burgers__container">
 
 
-		<ul class="burgers__list">
+		<ul class="burgers__list siema">
 			<li class="burgers__item">
 				<div class="burgers__ingredients ingredients">
 					<img class="ingredients__icon" src="./img/icons/burger.svg" alt="burger icon">
@@ -159,11 +159,230 @@
 					</div>
 				</div>
 			</li>
+			<li class="burgers__item">
+				<div class="burgers__ingredients ingredients">
+					<img class="ingredients__icon" src="./img/icons/burger.svg" alt="burger icon">
+					<div class="ingredients__text">состав</div>
+					<div class="ingredients__dropdown">
+						<ul class="ingredients__list">
+							<li class="ingredients__row">
+								<div class="ingredients__cell"><img src="./img/icons/beef.svg" alt="ingredients__table-icon"></div>
+								<div class="ingredients__cell">
+									<div class="ingredients__item">Говядина</div>
+								</div>
+								<div class="ingredients__cell">
+									<div class="ingredients__wight">300г</div>
+								</div>
+							</li>
+							<li class="ingredients__row">
+								<div class="ingredients__cell"><img src="./img/icons/buns.svg" alt="ingredients__table-icon"></div>
+								<div class="ingredients__cell">
+									<div class="ingredients__item">Булочки</div>
+								</div>
+								<div class="ingredients__cell">
+									<div class="ingredients__wight">100г</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="burgers__weight">
+					<div class="burgers__weight-icon">
+						<div class="burgers__weight-val">1200</div>
+					</div>
+					<div class="burgers__weight-text">ккал</div>
 
+				</div>
+				<div class="burgers__img">
+					<img class="burgers__img-pic" src="./img/burgers/burger2.png" alt="">
+				</div>
+				<div class="burgers__desc">
+					<div class="burgers__title title title__color--white">Dark BEEF Burger</div>
+					<div class="burgers__text text-block">
+						<p>Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра
+							эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</p>
+					</div>
+					<div class="burgers__order">
+						<div class="burgers__order-price">
+
+							<div class="burgers__order-price-val">500</div>
+							<div class="burgers__order-price-currency">рублей</div>
+						</div>
+
+						<a href="#" class="burgers__order-btn btn">Заказать</a>
+
+					</div>
+				</div>
+			</li>
+			<li class="burgers__item">
+				<div class="burgers__ingredients ingredients">
+					<img class="ingredients__icon" src="./img/icons/burger.svg" alt="burger icon">
+					<div class="ingredients__text">состав</div>
+					<div class="ingredients__dropdown">
+						<ul class="ingredients__list">
+							<li class="ingredients__row">
+								<div class="ingredients__cell"><img src="./img/icons/beef.svg" alt="ingredients__table-icon"></div>
+								<div class="ingredients__cell">
+									<div class="ingredients__item">Говядина</div>
+								</div>
+								<div class="ingredients__cell">
+									<div class="ingredients__wight">300г</div>
+								</div>
+							</li>
+							<li class="ingredients__row">
+								<div class="ingredients__cell"><img src="./img/icons/buns.svg" alt="ingredients__table-icon"></div>
+								<div class="ingredients__cell">
+									<div class="ingredients__item">Булочки</div>
+								</div>
+								<div class="ingredients__cell">
+									<div class="ingredients__wight">100г</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="burgers__weight">
+					<div class="burgers__weight-icon">
+						<div class="burgers__weight-val">1200</div>
+					</div>
+					<div class="burgers__weight-text">ккал</div>
+
+				</div>
+				<div class="burgers__img">
+					<img class="burgers__img-pic" src="./img/burgers/burger3.png" alt="">
+				</div>
+				<div class="burgers__desc">
+					<div class="burgers__title title title__color--white">Dark BEEF Burger</div>
+					<div class="burgers__text text-block">
+						<p>Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра
+							эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</p>
+					</div>
+					<div class="burgers__order">
+						<div class="burgers__order-price">
+
+							<div class="burgers__order-price-val">500</div>
+							<div class="burgers__order-price-currency">рублей</div>
+						</div>
+
+						<a href="#" class="burgers__order-btn btn">Заказать</a>
+
+					</div>
+				</div>
+			</li>
+			<li class="burgers__item">
+				<div class="burgers__ingredients ingredients">
+					<img class="ingredients__icon" src="./img/icons/burger.svg" alt="burger icon">
+					<div class="ingredients__text">состав</div>
+					<div class="ingredients__dropdown">
+						<ul class="ingredients__list">
+							<li class="ingredients__row">
+								<div class="ingredients__cell"><img src="./img/icons/beef.svg" alt="ingredients__table-icon"></div>
+								<div class="ingredients__cell">
+									<div class="ingredients__item">Говядина</div>
+								</div>
+								<div class="ingredients__cell">
+									<div class="ingredients__wight">300г</div>
+								</div>
+							</li>
+							<li class="ingredients__row">
+								<div class="ingredients__cell"><img src="./img/icons/buns.svg" alt="ingredients__table-icon"></div>
+								<div class="ingredients__cell">
+									<div class="ingredients__item">Булочки</div>
+								</div>
+								<div class="ingredients__cell">
+									<div class="ingredients__wight">100г</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="burgers__weight">
+					<div class="burgers__weight-icon">
+						<div class="burgers__weight-val">1200</div>
+					</div>
+					<div class="burgers__weight-text">ккал</div>
+
+				</div>
+				<div class="burgers__img">
+					<img class="burgers__img-pic" src="./img/burgers/burger4.png" alt="">
+				</div>
+				<div class="burgers__desc">
+					<div class="burgers__title title title__color--white">Dark BEEF Burger</div>
+					<div class="burgers__text text-block">
+						<p>Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра
+							эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</p>
+					</div>
+					<div class="burgers__order">
+						<div class="burgers__order-price">
+
+							<div class="burgers__order-price-val">500</div>
+							<div class="burgers__order-price-currency">рублей</div>
+						</div>
+
+						<a href="#" class="burgers__order-btn btn">Заказать</a>
+
+					</div>
+				</div>
+			</li>
+			<li class="burgers__item">
+				<div class="burgers__ingredients ingredients">
+					<img class="ingredients__icon" src="./img/icons/burger.svg" alt="burger icon">
+					<div class="ingredients__text">состав</div>
+					<div class="ingredients__dropdown">
+						<ul class="ingredients__list">
+							<li class="ingredients__row">
+								<div class="ingredients__cell"><img src="./img/icons/beef.svg" alt="ingredients__table-icon"></div>
+								<div class="ingredients__cell">
+									<div class="ingredients__item">Говядина</div>
+								</div>
+								<div class="ingredients__cell">
+									<div class="ingredients__wight">300г</div>
+								</div>
+							</li>
+							<li class="ingredients__row">
+								<div class="ingredients__cell"><img src="./img/icons/buns.svg" alt="ingredients__table-icon"></div>
+								<div class="ingredients__cell">
+									<div class="ingredients__item">Булочки</div>
+								</div>
+								<div class="ingredients__cell">
+									<div class="ingredients__wight">100г</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="burgers__weight">
+					<div class="burgers__weight-icon">
+						<div class="burgers__weight-val">1200</div>
+					</div>
+					<div class="burgers__weight-text">ккал</div>
+
+				</div>
+				<div class="burgers__img">
+					<img class="burgers__img-pic" src="./img/burgers/burger5.png" alt="">
+				</div>
+				<div class="burgers__desc">
+					<div class="burgers__title title title__color--white">Dark BEEF Burger</div>
+					<div class="burgers__text text-block">
+						<p>Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра
+							эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</p>
+					</div>
+					<div class="burgers__order">
+						<div class="burgers__order-price">
+
+							<div class="burgers__order-price-val">500</div>
+							<div class="burgers__order-price-currency">рублей</div>
+						</div>
+
+						<a href="#" class="burgers__order-btn btn">Заказать</a>
+
+					</div>
+				</div>
+			</li>
 		</ul>
 
-		<a class="burgers__prev" href="#" id="slide-prev"> </a>
-		<a class="burgers__next" href="#" id="slide-next"> </a>
+		<a class="burgers__prev" href="#" id="burgers_slider-control--prev"> </a>
+		<a class="burgers__next" href="#" id="burgers_slider-control--next"> </a>
 
 		<!-- <a class="burgers__prev" href="#" id="slide-prev">
 			<img class="arrow-left" src="./img/content/first/arrow-scroll.svg" alt="">
@@ -411,18 +630,18 @@
 </section>
 
 <section class="form-screen section">
-	<form action="post" class="form container">
+	<form action="post" class="form container" id="order-form">
 		<h2 class="title form__title">ЗАКАЖИТЕ ДОСТАВКУ</h2>
 		<div class="form__maincontent">
 			<div class="form__col">
 				<div class="form__row">
 					<label class="form__block">
 						<div class="form__input-title">Имя</div>
-						<input type="text" class="form__input">
+						<input type="text" class="form__input" name="customerName">
 					</label>
 					<label class="form__block">
 						<div class="form__input-title">Телефон</div>
-						<input type="text" class="form__input">
+						<input type="text" class="form__input" name="phone">
 					</label>
 				</div>
 
@@ -483,7 +702,7 @@
 					</label>
 				</div>
 				<div class="form__row">
-					<a href="#" class="btn">Заказать</a>
+					<a href="#" class="btn" id="order-btn">Заказать</a>
 					<a href="#" class="btn btn--bg-black">Очистить</a>
 
 				</div>
@@ -627,6 +846,7 @@
 
 </body>
 <script src="./libs/jquery-3.3.1.min.js"></script>
+<script src="./libs/siema.min.js"></script>
 <script src="./js/app.min.js"></script>
 
 </html>
