--- a/app/sections/80_form.html
+++ b/app/sections/80_form.html
@@ -1,16 +1,16 @@
 <section class="form-screen section">
-	<form action="post" class="form container">
+	<form action="post" class="form container" id="order-form">
 		<h2 class="title form__title">ЗАКАЖИТЕ ДОСТАВКУ</h2>
 		<div class="form__maincontent">
 			<div class="form__col">
 				<div class="form__row">
 					<label class="form__block">
 						<div class="form__input-title">Имя</div>
-						<input type="text" class="form__input">
+						<input type="text" class="form__input" name="customerName">
 					</label>
 					<label class="form__block">
 						<div class="form__input-title">Телефон</div>
-						<input type="text" class="form__input">
+						<input type="text" class="form__input" name="phone">
 					</label>
 				</div>
 
@@ -71,7 +71,7 @@
 					</label>
 				</div>
 				<div class="form__row">
-					<a href="#" class="btn">Заказать</a>
+					<a href="#" class="btn" id="order-btn">Заказать</a>
 					<a href="#" class="btn btn--bg-black">Очистить</a>
 
 				</div>
