--- a/app/sections/99_finish.html
+++ b/app/sections/99_finish.html
@@ -2,6 +2,7 @@
 
 </body>
 <script src="./libs/jquery-3.3.1.min.js"></script>
+<script src="./libs/siema.min.js"></script>
 <script src="./js/app.min.js"></script>
 
 </html>
