--- a/app/index.html
+++ b/app/index.html
@@ -687,8 +687,8 @@
 					</label>
 				</div>
 				<div class="form__row">
-					<a href="#" class="btn" id="order-btn">Заказать</a>
-					<a href="#" class="btn btn--bg-black" id='clearForm-btn'>Очистить</a>
+					<button type="submit" class="btn" id="order-btn">Заказать</button>
+					<button type="reset" class="btn btn--bg-black" id='clearForm-btn'>Очистить</>
 
 				</div>
 
